--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-    <button type="button" class="btn btn-primary">Hola Mundo</button>
 
+    <form class="formulario">
+        <input type="text" placeholder="Nombre">
+        <input type="text" placeholder="Apellidos">
+        <input type="email" placeholder="Correo">
+        <input type="text" placeholder="Usuario">
+        <input type="password" placeholder="Contraseña">
+        <input type="number" placeholder="Teléfono (911111111)">
+        <button type="button">Registrar</button>
+    </form>
 
     <!--JQuery 3.5.1-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
