--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div><input id="usuario" class="formulario__usuario" type="text" placeholder="Usuario"></div>
             <div><input id="contraseña" class="formulario__contraseña" type="password" placeholder="Contraseña"></div>
             <div><input id="telefono" class="formulario__telefono" type="number" placeholder="Teléfono (911111111)"></div>
-            <div><button id="boton" class="formulario__boton" type="button" onclick="obtenerDatos()">Registrar</button></div>
+            <div><button id="boton" class="formulario__boton" type="button">Registrar</button></div>
         </form>
 
     </div>
@@ -34,7 +34,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <!--Bootstrap JS 4.5.3-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
     <!--Mi script-->
     <script type="text/javascript" src="assets/js/script.js"></script>
+</body>
+    
 </html>
