--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Formulario</title>
     <!--Mi estilo-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!--Google Fonts-->
-    <!--Font Awesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
 
@@ -19,21 +16,15 @@
         <form class="formulario">
             <div><input id="nombre" class="formulario__nombre" type="text" placeholder="Nombre"></div>
             <div><input id="apellidos" class="formulario__apellidos" type="text" placeholder="Apellidos"></div>
-            <div><input id="correo" class="formulario__correo" type="email" placeholder="Correo"></div>
+            <div><input id="correo" class="formulario__correo" type="text" placeholder="Correo"></div>
             <div><input id="usuario" class="formulario__usuario" type="text" placeholder="Usuario"></div>
             <div><input id="contraseña" class="formulario__contraseña" type="password" placeholder="Contraseña"></div>
-            <div><input id="telefono" class="formulario__telefono" type="number" placeholder="Teléfono (911111111)"></div>
+            <div><input id="telefono" class="formulario__telefono" type="text" placeholder="Teléfono (911111111)"></div>
             <div><button id="boton" class="formulario__boton" type="button">Registrar</button></div>
         </form>
 
     </div>
 
-    <!--JQuery 3.5.1-->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <!--Popper JS 1.16.1-->
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <!--Bootstrap JS 4.5.3-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <!--Mi script-->
     <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
